Agregue un cambio,con el creador de la pagina

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                 <a href="#"><img src="./images/ig.svg" alt="logo_instagram"></a>
                 <a href="#"><img src="./images/twitter.svg" alt="logo_twitter"></a>
             </div>
+            <div class="fecha_hoy">
+                <script type="text/javascript"> var meses = new Array ("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"); var diasSemana = new Array("Domingo","Lunes","Martes","Miércoles","Jueves","Viernes","Sábado"); var f=new Date(); document.write(diasSemana[f.getDay()] + " " + f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYear()); </script>
+            </div>
+            
         </footer>
         
         <video class="overlay" muted autoplay loop>
